--- a/templates/home/Home.html
+++ b/templates/home/Home.html
@@ -9,7 +9,7 @@
     <div id="sidebar1" style="height: auto !important;" itemscope="itemscope" itemtype="http://schema.org/WPSideBar"
         style="height: auto !important;">
 
-        <div class="slidebar ty-trigger section" id="slidebar" style="height: auto !important;">
+        <div class="slidebar ty-trigger section" id="slidebar" style="height: auto !important; box-shadow: 4px 4px 4px rgb(225, 182, 246);">
 
             <div class="widget LinkList" data-version="1" id="LinkList1">
                 <h2 style="color: #556B2F; padding:5px;">
@@ -17,57 +17,57 @@
                 </h2>
                 <div class="widget-content">
                     <div id="srch1">
-                        <form method="get" style="    margin-left: 0.5rem!important;" action="/search" class="form-inline my-2 my-lg-0 mx-3">
+                        <form method="get" style="margin-left: 0.5rem!important;" action="/search" class="form-inline my-2 my-lg-0 mx-3">
                         <input class="form-control mr-sm-1" type="search" placeholder="Search Article" aria-label="Search" name="query"
                             id="query" style="width:55%">
                         <button class="btn btn-outline-success my-2 mr-sm-1" type="submit">Search</button>
                         </form>
                     </div>
 
-                    <ul style="color: green;">
+                    <ul style="color: rgb(157, 94, 189);">
 
 
                         <li><a href="/">
-                                <p style=" color: green;">
-                                    <p style=" color: green;">HOME</p>
+                                <p style=" color: rgb(157, 94, 189);">
+                                    <p style=" color: rgb(157, 94, 189);">HOME</p>
                                 </p>
                             </a></li>
-                        <li><a href="/blog" style="color: green;">
+                        <li><a href="/blog" style="color: rgb(157, 94, 189);">
                                 <p>
-                                    <p style=" color: green;">BLOGS</p>
+                                    <p style=" color: rgb(157, 94, 189);">BLOGS</p>
                                 </p>
                             </a></li>
-                        <li><a href="#topic" style="color: green;">
+                        <li><a href="#topic" style="color: rgb(157, 94, 189);">
                                 <p>
-                                    <p style=" color: green;">TOPICS</p>
+                                    <p style=" color: rgb(157, 94, 189);">TOPICS</p>
                                 </p>
                             </a></li>
-                        <li><a href="/archive" style="color: green;">
+                        <li><a href="/archive" style="color: rgb(157, 94, 189);">
                                 <p>
-                                    <p style=" color: green;">ARCHIVE</p>
+                                    <p style=" color: rgb(157, 94, 189);">ARCHIVE</p>
                                 </p>
                             </a></li>
-                        <li><a href="/about" style="color: green;">
+                        <li><a href="/about" style="color: rgb(157, 94, 189);">
                                 <p>
-                                    <p style=" color: green;">ABOUT</p>
+                                    <p style=" color: rgb(157, 94, 189);">ABOUT</p>
                                 </p>
                             </a></li>
-                        <li><a href="/contact" style="color: green;">
+                        <li><a href="/contact" style="color: rgb(157, 94, 189);">
                                 <p>
-                                    <p style=" color: green;">Contact US</p>
+                                    <p style=" color: rgb(157, 94, 189);">Contact US</p>
                                 </p>
                             </a></li>
-                        <li><a href="/books" style="color: green;">
+                        <li><a href="/books" style="color: rgb(157, 94, 189);">
                                 <p>
-                                    <p style=" color: green;">BOOKS CORNER</p>
+                                    <p style=" color: rgb(157, 94, 189);">Magazine Corner</p>
                                 </p>
                             </a></li>
                         {% if not user.is_authenticated %}
                         <li>
                             <a class="dropdown-item" data-toggle="modal" data-target="#signUPModal"
-                                style="color: green; width:70%; padding: 0px; cursor: pointer;">
+                                style="color: rgb(157, 94, 189); width:70%; padding: 0px; cursor: pointer;">
                                 <p>
-                                    <p style=" color: green;">SignUP</p>
+                                    <p style=" color: rgb(157, 94, 189);">SignUP</p>
                                 </p>
                             </a>
                         </li>
@@ -75,9 +75,9 @@
                         {% if not user.is_authenticated %}
                         <li>
                             <a class="dropdown-item" data-toggle="modal" data-target="#loginModal"
-                                style="color: green; width:70%; padding: 0px; cursor: pointer;">
+                                style="color: rgb(157, 94, 189); width:70%; padding: 0px; cursor: pointer;">
                                 <p>
-                                    <p style=" color: green;">LogIN</p>
+                                    <p style=" color: rgb(157, 94, 189);">LogIN</p>
                                 </p>
                             </a>
                         </li>
@@ -85,21 +85,21 @@
                         {% if user.is_authenticated %}
                         <li>
                             <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal"
-                                style="color: green; width:70%; padding: 0px; cursor: pointer;">
+                                style="color: rgb(157, 94, 189); width:70%; padding: 0px; cursor: pointer;">
                                 <p>
-                                    <p style=" color: green;">LogOUT</p>
+                                    <p style=" color: rgb(157, 94, 189);">LogOUT</p>
                                 </p>
                             </a>
                         </li>
                         {% endif %}
                         <div>
-                            <a style="color: green; padding-left: 10px; padding-right: 20px;"
+                            <a style="color: rgb(157, 94, 189); padding-left: 10px; padding-right: 20px;"
                                 href="https://www.facebook.com/SunniHanfiOrganisationMumbai/"><i
                                     class="fab fa-facebook-square fa-2x"></i></a>
-                            <a style="color: green; padding-left: 10px; padding-right: 20px;"
+                            <a style="color: rgb(157, 94, 189); padding-left: 10px; padding-right: 20px;"
                                 href="mailto: imran.shaikh16230@gmail.com" title="email"><i
                                     class="fas fa-envelope fa-2x"></i></a>
-                            <a style="color:green; padding-left: 10px;padding-right:20px;"
+                            <a style="color:rgb(157, 94, 189); padding-left: 10px;padding-right:20px;"
                                 href="https://www.youtube.com/user/786SHO/videos" title="youtube"><i
                                     class="fa fa-youtube-play fa-2x" aria-hidden="true"></i>
                             </a>
@@ -123,13 +123,13 @@
             </div>
 
         </div>
-        <div id="rollbar" class="col col-lg-2" style="margin-top: 15px; z-index: 1;">
+        <div id="rollbar" class="col col-lg-2" style="margin-top: 15px; z-index: 1; width: 90%;">
             <div class="container">
                 <div class="actionon">
                     <div id="spanMenu">
                         <span style="padding-top:8px;">Menu</span>
                     </div>
-                </div>
+                </div> 
                 <div class="actionoff">
                     <div id="spanMenuoff">
                         <span style="padding-top:8px;">Menu</span>
@@ -164,12 +164,12 @@
                         left: 50px;
                         width: 50px;
                         height: 50px;
-                        background: rgb(142, 218, 129);
-                        color: #006400;
+                        background: snow;
+                        color: #660099;
                         border-radius: 100%;
                         cursor: pointer;
                         font-family: cursive;
-                        box-shadow: 0 10px 5px #006400;
+                        box-shadow: 0 10px 5px  rgb(225, 182, 246);
                     }
 
                     .actionon span {
@@ -179,7 +179,7 @@
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        color: #006400;
+                        color: #660099;
                         font-size: 1.2em;
                         transition: 0.3s ease-in-out;
                     }
@@ -195,12 +195,12 @@
                         left: 50px;
                         width: 50px;
                         height: 50px;
-                        background: rgb(142, 218, 129);
-                        color: #006400;
+                        background: snow;
+                        color: #660099;
                         border-radius: 100%;
                         cursor: pointer;
                         font-family: cursive;
-                        box-shadow: 0 10px 5px #006400;
+                        box-shadow: 0 10px 5px  rgb(225, 182, 246);
                     }
 
                     .actionoff span {
@@ -210,7 +210,7 @@
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        color: #006400;
+                        color: #660099;
                         font-size: 1.2em;
                         transition: 0.3s ease-in-out;
                     }
@@ -234,37 +234,46 @@
     <div class="container my-3 mx-10" id="wrapper1">
 
         <div class="jumbotron text-white"
-            style=" margin-top: 10px; border:0px green ; outline-style: outset; outline-color: green; background-color: rgb(193, 255, 182) ; "" >
+            style=" margin-top: 10px; border:0px rgb(157, 94, 189) ; outline-style: outset; outline-color: rgb(157, 94, 189) ; background-color: snow ; box-shadow: 8px 8px 8px rgb(225, 182, 246); " >
             <div style=" color: black;">
-            <h1 style="color: #556B2F;"> بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيم</h1>
-        </div style="color: green;">
+            </div style="color: green;">
         <div>
-
-            <h1 style="color: green; word-break : break-all" id="abc">Welcome to </h1>
-            <h1 style="color: green; word-break : break-all" id="abc1">SUNNI HANFI ORGANIZATION</h1>
-            <h1 style="color: rgb(7, 107, 12); font-style: italic;font-size: 40px;">{% if user.is_authenticated %}
-                {{request.user}} {% endif %}</h1>
+            <h1 style="color: rgb(111, 100, 117); word-break : break-all" id="ab"><span style="box-shadow: 4px 4px 4px rgb(225, 182, 246); border-radius: 4px;">Welcome to NewsInfo</span></h1>
+            <h1 style="color: rgb(111, 100, 117) ; word-break : break-all" id="ab1"><span style="box-shadow: 4px 4px 4px rgb(225, 182, 246);border-radius: 4px;">Welcome to</span> </h1>
+            <h1 style="color: rgb(111, 100, 117) ; word-break : break-all" id="ab2"><span style="box-shadow: 4px 4px 4px rgb(225, 182, 246);border-radius: 4px;">NewsInfo</span></h1>
+            <h1 style="color: rgb(157, 94, 189) ; font-style: italic;font-size: 40px;"><span style="box-shadow: 4px 4px 4px rgb(225, 182, 246); border-radius: 4px;">{% if user.is_authenticated %}
+                {{request.user}} {% endif %}</span></h1>
         </div>
+          
 
         <p class="lead"></p>
         <hr class="my-4">
-        <p style="color:green;">THE MISSION OF SUNNI HANFI ORGANIZATION IS TO ENCOUNTER WRONG CONCEPTS OF ISLAAM THROUGH
-            QURAN, AHADEES, IJMA AND QAYAAS AND EXPLAIN THE TRUE AQEEDA (THAT IS ALHE-SUNNAT-WAL-JAMAAT(BARELVI)) WITH
-            REFERENCES(ALONG SCAN PAGES) IN ROMAN ENGLISH !</p>
-        <a class="btn btn-success btn-lg" href="/blog" role="button">Go to Blog !</a>
+        <p style="color:rgb(157, 94, 189) ;">THE MISSION OF NewsInfo IS TO ENCOUNTER WRONG NEWS OF THROUGH
+            REFERENCES IN ENGLISH !
+        
+MISSION, VISION
+VISION
+PTV shall be the leading news and public information channel in the country.
+MISSION
+We shall inform, inspire, and empower our people and nation through relevant, trustworthy, and world-class quality television programs and services.
+CORE VALUES
+Professionalism, Integrity, Commitment, and Dedication Teamwork, Innovation, and Service, Excellence Value for God, Country and People</p>
+        
+        <a class="btn btn-lg" style="color: snow; background-color: rgb(157, 94, 189); box-shadow: 6px 6px 6px rgb(225, 182, 246);" href="/blog" role="button">News Articles !</a>
     </div>
+    <!-- <button type="button" class="btn btn-outline-warning">Warning</button> -->
 
     <div class="container" id="wrapper2">
         <a name="topic"></a>
-        <h2 style="color: #556B2F;">TOPICS :</h2>
+        <h2 style="color: rgb(157, 94, 189); "><span style="box-shadow: 4px 4px 4px rgb(225, 182, 246);">TOPICS :</span></h2>
 
         {% for post in subtopicsLis1%}
         {% if post %}
         <hr>
-        <div class="row no-gutters border rounded overflow-hidden flex-md-row my-4 shadow-sm h-md-250 position-relative"
-            style=" border:0px green ; outline-style: outset; outline-color: green; background-color: rgb(193, 255, 182) ; color: #006a4e; ">
+        <div class="row no-gutters border rounded overflow-hidden flex-md-row my-4 h-md-250 position-relative"
+            style=" box-shadow: 10px 10px 10px rgb(225, 182, 246); border:0px snow ; outline-style: outset; outline-color: rgb(157, 94, 189); background-color: snow; color: snow; ">
             <div class="col p-4 d-flex flex-column position-static">
-                <h4><strong class="d-inline-block mb-2" style="color:rgb(36, 160, 238);">{{post|underscore}}</strong>
+                <h4><strong class="d-inline-block mb-2" style="color:rgb(157, 94, 189);">{{post|underscore}}</strong>
                 </h4>
                 <!-- <h3 class="mb-0">{{post|underscore}}</h3> -->
                 <!-- <div class="mb-1 text-muted">Nov 12</div>  -->
@@ -290,24 +299,7 @@
 
 
 
-<style>
-    #abc {
-        color: rgb(17, 161, 218);
-        font-family: "Georgia";
-        font-style: italic;
-    }
 
-    #abc1 {
-        color: rgb(17, 161, 218);
-        font-family: "Georgia";
-        font-style: italic;
-    }
-
-    .img-fluid {
-        max-width: 110%;
-        height: 600px;
-    }
-</style>
 
 </div>
 
@@ -455,9 +447,9 @@
 
     @media only screen and (min-width: 250px) {
         #LinkList1 {
-            border: 0.6px solid green;
+            border: 1px solid rgb(157, 94, 189);
             border-radius: 3px;
-            background-color: rgb(193, 255, 182);
+            background-color: snow;
         }
     }
 
