--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -6,112 +6,118 @@
 <div class="row" style="height: auto !important; margin-right: 10px; margin-left: 10px; margin-top: 10px;">
     <div id="sidebar1" style="height: auto !important;" itemscope="itemscope"
             itemtype="http://schema.org/WPSideBar" style="height: auto !important;">
-            <div class="slidebar ty-trigger section" id="slidebar" style="height: auto !important;">
+            <div class="slidebar ty-trigger section" id="slidebar" style="height: auto !important; box-shadow: 4px 4px 4px rgb(225, 182, 246);">
                 
-            <div class="widget LinkList" data-version="1" id="LinkList1">
-                <h2 style="color: #556B2F; padding:5px;">
-             
-                </h2>
-                <div class="widget-content">
-                    <div id="srch1">
-                        <form method="get" style="    margin-left: 0.5rem!important;" action="/search" class="form-inline my-2 my-lg-0 mx-3">
-                        <input class="form-control mr-sm-1" type="search" placeholder="Search Article" aria-label="Search" name="query"
-                            id="query" style="width:55%">
-                        <button class="btn btn-outline-success my-2 mr-sm-1" type="submit">Search</button>
-                        </form>
-                    </div>
-        
-                    <ul style="color: green;">
-        
-                    
-                        <li><a href="/">
-                                <p style=" color: green;">
-                                    <p style=" color: green;">HOME</p>
-                                </p>
-                            </a></li>
-                            <li><a href="/blog" style="color: green;">
-                                <p>
-                                    <p style=" color: green;">BLOGS</p>
-                                </p>
-                            </a></li>
-                            <li><a href="/#topic" style="color: green;">
-                                <p>
-                                    <p style=" color: green;">TOPICS</p>
-                                </p>
-                            </a></li>
-                            <li><a href="/archive" style="color: green;">
-                                <p>
-                                    <p style=" color: green;">ARCHIVE</p>
-                                </p>
-                            </a></li>
-                            <li><a href="/about" style="color: green;">
-                                <p>
-                                    <p style=" color: green;">ABOUT</p>
-                                </p>
-                            </a></li>
-                            <li><a href="/contact" style="color: green;">
-                                <p>
-                                    <p style=" color: green;">Contact US</p>
-                                </p>
-                            </a></li>
-                            <li><a href="/books" style="color: green;">
-                                <p>
-                                    <p style=" color: green;">BOOKS CORNER</p>
-                                </p>
-                            </a></li>
+                <div class="widget LinkList" data-version="1" id="LinkList1">
+                    <h2 style="color: #556B2F; padding:5px;">
+    
+                    </h2>
+                    <div class="widget-content">
+                        <div id="srch1">
+                            <form method="get" style="margin-left: 0.5rem!important;" action="/search" class="form-inline my-2 my-lg-0 mx-3">
+                            <input class="form-control mr-sm-1" type="search" placeholder="Search Article" aria-label="Search" name="query"
+                                id="query" style="width:55%">
+                            <button class="btn btn-outline-success my-2 mr-sm-1" type="submit">Search</button>
+                            </form>
+                        </div>
+    
+                        <ul style="color: rgb(157, 94, 189);">
+    
+    
+                            <li><a href="/">
+                                    <p style=" color: rgb(157, 94, 189);">
+                                        <p style=" color: rgb(157, 94, 189);">HOME</p>
+                                    </p>
+                                </a></li>
+                            <li><a href="/blog" style="color: rgb(157, 94, 189);">
+                                    <p>
+                                        <p style=" color: rgb(157, 94, 189);">BLOGS</p>
+                                    </p>
+                                </a></li>
+                            <li><a href="/#topic" style="color: rgb(157, 94, 189);">
+                                    <p>
+                                        <p style=" color: rgb(157, 94, 189);">TOPICS</p>
+                                    </p>
+                                </a></li>
+                            <li><a href="/archive" style="color: rgb(157, 94, 189);">
+                                    <p>
+                                        <p style=" color: rgb(157, 94, 189);">ARCHIVE</p>
+                                    </p>
+                                </a></li>
+                            <li><a href="/about" style="color: rgb(157, 94, 189);">
+                                    <p>
+                                        <p style=" color: rgb(157, 94, 189);">ABOUT</p>
+                                    </p>
+                                </a></li>
+                            <li><a href="/contact" style="color: rgb(157, 94, 189);">
+                                    <p>
+                                        <p style=" color: rgb(157, 94, 189);">Contact US</p>
+                                    </p>
+                                </a></li>
+                            <li><a href="/books" style="color: rgb(157, 94, 189);">
+                                    <p>
+                                        <p style=" color: rgb(157, 94, 189);">Magazine Corner</p>
+                                    </p>
+                                </a></li>
                             {% if not user.is_authenticated %}
                             <li>
-                                <a class="dropdown-item" data-toggle="modal" data-target="#signUPModal" style="color: green; width:70%; padding: 0px; cursor: pointer;">
-                                <p>
-                                    <p style=" color: green;">SignUP</p>
-                                </p>
-                            </a>
+                                <a class="dropdown-item" data-toggle="modal" data-target="#signUPModal"
+                                    style="color: rgb(157, 94, 189); width:70%; padding: 0px; cursor: pointer;">
+                                    <p>
+                                        <p style=" color: rgb(157, 94, 189);">SignUP</p>
+                                    </p>
+                                </a>
                             </li>
                             {% endif %}
                             {% if not user.is_authenticated %}
                             <li>
-                                <a class="dropdown-item" data-toggle="modal" data-target="#loginModal" style="color: green; width:70%; padding: 0px; cursor: pointer;">
-                                <p>
-                                    <p style=" color: green;">LogIN</p>
-                                </p>
-                            </a>
+                                <a class="dropdown-item" data-toggle="modal" data-target="#loginModal"
+                                    style="color: rgb(157, 94, 189); width:70%; padding: 0px; cursor: pointer;">
+                                    <p>
+                                        <p style=" color: rgb(157, 94, 189);">LogIN</p>
+                                    </p>
+                                </a>
                             </li>
                             {% endif %}
                             {% if user.is_authenticated %}
                             <li>
-                                <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal" style="color: green; width:70%; padding: 0px; cursor: pointer;">
-                                <p>
-                                    <p style=" color: green;">LogOUT</p>
-                                </p>
-                            </a>
+                                <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal"
+                                    style="color: rgb(157, 94, 189); width:70%; padding: 0px; cursor: pointer;">
+                                    <p>
+                                        <p style=" color: rgb(157, 94, 189);">LogOUT</p>
+                                    </p>
+                                </a>
                             </li>
                             {% endif %}
                             <div>
-                                <a style="color: green; padding-left: 10px; padding-right: 20px;"
+                                <a style="color: rgb(157, 94, 189); padding-left: 10px; padding-right: 20px;"
                                     href="https://www.facebook.com/SunniHanfiOrganisationMumbai/"><i
                                         class="fab fa-facebook-square fa-2x"></i></a>
-                                <a style="color: green; padding-left: 10px; padding-right: 20px;"
-                                    href="mailto: imran.shaikh16230@gmail.com" title="email"><i class="fas fa-envelope fa-2x"></i></a>
-                                <a style="color:green; padding-left: 10px;padding-right:20px;"
+                                <a style="color: rgb(157, 94, 189); padding-left: 10px; padding-right: 20px;"
+                                    href="mailto: imran.shaikh16230@gmail.com" title="email"><i
+                                        class="fas fa-envelope fa-2x"></i></a>
+                                <a style="color:rgb(157, 94, 189); padding-left: 10px;padding-right:20px;"
                                     href="https://www.youtube.com/user/786SHO/videos" title="youtube"><i
                                         class="fa fa-youtube-play fa-2x" aria-hidden="true"></i>
                                 </a>
                             </div>
-
-
-                            
-
-                            
-                    </ul>
-                    <div class="clear"></div>
-                    <span class="widget-item-control">
-                        <span class="item-control blog-admin">
-
+    
+    
+    
+    
+    
+                        </ul>
+                        <div class="clear"></div>
+                        <span class="widget-item-control">
+                            <span class="item-control blog-admin">
+    
+                            </span>
                         </span>
-                    </span>
-                    <div class="clear"></div>
+                        <div class="clear"></div>
+                    </div>
+    
+    
                 </div>
-            </div>
 
 
                 </div>
@@ -150,67 +156,68 @@
                         </script>
         
                         <style>
-                            .actionon {
-                                /* position: fixed; */
-                                bottom: 50px;
-                                left: 50px;
-                                width: 50px;
-                                height: 50px;
-                                background: rgb(142, 218, 129);
-                                color: #006400;
-                                border-radius: 100%;
-                                cursor: pointer;
-                                font-family: cursive;
-                                box-shadow: 0 10px 5px #006400;
-                            }
-        
-                            .actionon span {
-                                position: relative;
-                                width: 100%;
-                                height: 100%;
-                                display: flex;
-                                justify-content: center;
-                                align-items: center;
-                                color: #006400;
-                                font-size: 1.2em;
-                                transition: 0.3s ease-in-out;
-                            }
-        
-                            .actionon:active span {
-                                transform: rotate(75deg);
-        
-                            }
-                            .actionoff {
-                                /* position: fixed; */
-                                bottom: 50px;
-                                left: 50px;
-                                width: 50px;
-                                height: 50px;
-                                background: rgb(142, 218, 129);
-                                color: #006400;
-                                border-radius: 100%;
-                                cursor: pointer;
-                                font-family: cursive;
-                                box-shadow: 0 10px 5px #006400;
-                            }
-        
-                            .actionoff span {
-                                position: relative;
-                                width: 100%;
-                                height: 100%;
-                                display: flex;
-                                justify-content: center;
-                                align-items: center;
-                                color: #006400;
-                                font-size: 1.2em;
-                                transition: 0.3s ease-in-out;
-                            }
-        
-                            .actionoff:active span {
-                                transform: rotate(75deg);
-        
-                            }
-                        </style>
+                    .actionon {
+                        /* position: fixed; */
+                        bottom: 50px;
+                        left: 50px;
+                        width: 50px;
+                        height: 50px;
+                        background: snow;
+                        color: #660099;
+                        border-radius: 100%;
+                        cursor: pointer;
+                        font-family: cursive;
+                        box-shadow: 0 10px 5px  rgb(225, 182, 246);
+                    }
+
+                    .actionon span {
+                        position: relative;
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        color: #660099;
+                        font-size: 1.2em;
+                        transition: 0.3s ease-in-out;
+                    }
+
+                    .actionon:active span {
+                        transform: rotate(75deg);
+
+                    }
+
+                    .actionoff {
+                        /* position: fixed; */
+                        bottom: 50px;
+                        left: 50px;
+                        width: 50px;
+                        height: 50px;
+                        background: snow;
+                        color: #660099;
+                        border-radius: 100%;
+                        cursor: pointer;
+                        font-family: cursive;
+                        box-shadow: 0 10px 5px  rgb(225, 182, 246);
+                    }
+
+                    .actionoff span {
+                        position: relative;
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        color: #660099;
+                        font-size: 1.2em;
+                        transition: 0.3s ease-in-out;
+                    }
+
+                    .actionoff:active span {
+                        transform: rotate(75deg);
+
+                    }
+                </style>
                     </div>
                 </div>
                 <div id="srch" style="margin-top: 20px;">
@@ -228,16 +235,22 @@
             style=" background-color: white ; " >
             <div>
         </div style="color: green; ">
-        <h1 style="color:green;"><span style="background-color: rgb(193, 255, 182);
-            background-image: linear-gradient(to right, rgb(193, 255, 182)0%, rgb(193, 255, 182) 100%);">
-             بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيم</span></h1>
+        <h1 style="color:snow;"><span style="background-color: rgb(157, 94, 189); box-shadow: 5px 5px 5px rgb(225, 182, 246);
+            background-image: linear-gradient(to right, rgb(157, 94, 189)0%, rgb(157, 94, 189) 100%);">
+            About Us: </span></h1>
 
-        <p id = "ppp" style="color:green; padding-top:30px;  padding-bottom:30px; font-style:oblique ;">
-            <span style="background-color: rgb(193, 255, 182);
-        background-image: linear-gradient(to right, rgb(193, 255, 182)0%, rgb(193, 255, 182) 100%);">
-            """ THE MISSION OF SUNNI HANFI ORGANIZATION IS TO ENCOUNTER WRONG CONCEPTS OF ISLAAM THROUGH
-            QURAN, AHADEES, IJMA AND QAYAAS AND EXPLAIN THE TRUE AQEEDA (THAT IS ALHE-SUNNAT-WAL-JAMAAT(BARELVI)) WITH
-            REFERENCES(ALONG SCAN PAGES) IN ROMAN ENGLISH ! """
+        <p id = "ppp" style="color:snow; padding-top:30px; font-size: 20px; padding-bottom:30px; font-style:oblique ;">
+            <span style="background-color: rgb(157, 94, 189); box-shadow: 5px 5px 5px rgb(225, 182, 246);
+        background-image: linear-gradient(to right, rgb(157, 94, 189)0%, rgb(157, 94, 189) 100%);">
+            """ THE MISSION OF NewsInfo IS TO ENCOUNTER WRONG NEWS FROM SOCIAL MEDIA THROUGH
+            REFERENCES IN ENGLISH !
+            MISSION, VISION
+            VISION
+            PTV shall be the leading news and public information channel in the country.
+            MISSION
+            We shall inform, inspire, and empower our people and nation through relevant, trustworthy, and world-class quality television programs and services.
+            CORE VALUES
+            Professionalism, Integrity, Commitment, and Dedication Teamwork, Innovation, and Service, Excellence Value for God, Country and People """
         
         </span>
         </p>
@@ -404,9 +417,9 @@
 
     @media only screen and (min-width: 250px) {
         #LinkList1 {
-            border: 0.6px solid green;
+            border: 1px solid rgb(157, 94, 189);
             border-radius: 3px;
-            background-color: rgb(193, 255, 182);
+            background-color: snow;
         }
     }
 
