--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -7,111 +7,116 @@
   
     <div id="sidebar" style="height: auto !important;" itemscope="itemscope"
     itemtype="http://schema.org/WPSideBar" style="height: auto !important;">
-    <div class="slidebar ty-trigger section" id="slidebar" style="height: auto !important;">
+    <div class="slidebar ty-trigger section" id="slidebar" style="height: auto !important; box-shadow: 4px 4px 4px rgb(225, 182, 246);">
         <div class="widget LinkList" data-version="1" id="LinkList1">
             <h2 style="color: #556B2F; padding:5px;">
-             
+
             </h2>
             <div class="widget-content">
                 <div id="srch1">
-                    <form method="get" style="    margin-left: 0.5rem!important;" action="/search" class="form-inline my-2 my-lg-0 mx-3">
+                    <form method="get" style="margin-left: 0.5rem!important;" action="/search" class="form-inline my-2 my-lg-0 mx-3">
                     <input class="form-control mr-sm-1" type="search" placeholder="Search Article" aria-label="Search" name="query"
                         id="query" style="width:55%">
                     <button class="btn btn-outline-success my-2 mr-sm-1" type="submit">Search</button>
                     </form>
                 </div>
-    
-                <ul style="color: green;">
-    
-                
+
+                <ul style="color: rgb(157, 94, 189);">
+
+
                     <li><a href="/">
-                            <p style=" color: green;">
-                                <p style=" color: green;">HOME</p>
+                            <p style=" color: rgb(157, 94, 189);">
+                                <p style=" color: rgb(157, 94, 189);">HOME</p>
                             </p>
                         </a></li>
-                        <li><a href="/blog" style="color: green;">
+                    <li><a href="/blog" style="color: rgb(157, 94, 189);">
                             <p>
-                                <p style=" color: green;">BLOGS</p>
+                                <p style=" color: rgb(157, 94, 189);">BLOGS</p>
                             </p>
                         </a></li>
-                        <li><a href="/#topic" style="color: green;">
+                    <li><a href="/#topic" style="color: rgb(157, 94, 189);">
                             <p>
-                                <p style=" color: green;">TOPICS</p>
+                                <p style=" color: rgb(157, 94, 189);">TOPICS</p>
                             </p>
                         </a></li>
-                        <li><a href="/archive" style="color: green;">
+                    <li><a href="/archive" style="color: rgb(157, 94, 189);">
                             <p>
-                                <p style=" color: green;">ARCHIVE</p>
+                                <p style=" color: rgb(157, 94, 189);">ARCHIVE</p>
                             </p>
                         </a></li>
-                        <li><a href="/about" style="color: green;">
+                    <li><a href="/about" style="color: rgb(157, 94, 189);">
                             <p>
-                                <p style=" color: green;">ABOUT</p>
+                                <p style=" color: rgb(157, 94, 189);">ABOUT</p>
                             </p>
                         </a></li>
-                        <li><a href="/contact" style="color: green;">
+                    <li><a href="/contact" style="color: rgb(157, 94, 189);">
                             <p>
-                                <p style=" color: green;">Contact US</p>
+                                <p style=" color: rgb(157, 94, 189);">Contact US</p>
                             </p>
                         </a></li>
-                        <li><a href="/books" style="color: green;">
+                    <li><a href="/books" style="color: rgb(157, 94, 189);">
                             <p>
-                                <p style=" color: green;">BOOKS CORNER</p>
+                                <p style=" color: rgb(157, 94, 189);">Magazine Corner</p>
                             </p>
                         </a></li>
-                        {% if not user.is_authenticated %}
-                        <li>
-                            <a class="dropdown-item" data-toggle="modal" data-target="#signUPModal" style="color: green; width:70%; padding: 0px; cursor: pointer;">
+                    {% if not user.is_authenticated %}
+                    <li>
+                        <a class="dropdown-item" data-toggle="modal" data-target="#signUPModal"
+                            style="color: rgb(157, 94, 189); width:70%; padding: 0px; cursor: pointer;">
                             <p>
-                                <p style=" color: green;">SignUP</p>
+                                <p style=" color: rgb(157, 94, 189);">SignUP</p>
                             </p>
                         </a>
-                        </li>
-                        {% endif %}
-                        {% if not user.is_authenticated %}
-                        <li>
-                            <a class="dropdown-item" data-toggle="modal" data-target="#loginModal" style="color: green; width:70%; padding: 0px; cursor: pointer;">
+                    </li>
+                    {% endif %}
+                    {% if not user.is_authenticated %}
+                    <li>
+                        <a class="dropdown-item" data-toggle="modal" data-target="#loginModal"
+                            style="color: rgb(157, 94, 189); width:70%; padding: 0px; cursor: pointer;">
                             <p>
-                                <p style=" color: green;">LogIN</p>
+                                <p style=" color: rgb(157, 94, 189);">LogIN</p>
                             </p>
                         </a>
-                        </li>
-                        {% endif %}
-                        {% if user.is_authenticated %}
-                        <li>
-                            <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal" style="color: green; width:70%; padding: 0px; cursor: pointer;">
+                    </li>
+                    {% endif %}
+                    {% if user.is_authenticated %}
+                    <li>
+                        <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal"
+                            style="color: rgb(157, 94, 189); width:70%; padding: 0px; cursor: pointer;">
                             <p>
-                                <p style=" color: green;">LogOUT</p>
+                                <p style=" color: rgb(157, 94, 189);">LogOUT</p>
                             </p>
                         </a>
-                        </li>
-                        {% endif %}
-                        <div>
-                            <a style="color: green; padding-left: 10px; padding-right: 20px;"
-                                href="https://www.facebook.com/SunniHanfiOrganisationMumbai/"><i
-                                    class="fab fa-facebook-square fa-2x"></i></a>
-                            <a style="color: green; padding-left: 10px; padding-right: 20px;"
-                                href="mailto: imran.shaikh16230@gmail.com" title="email"><i class="fas fa-envelope fa-2x"></i></a>
-                            <a style="color:green; padding-left: 10px;padding-right:20px;"
-                                href="https://www.youtube.com/user/786SHO/videos" title="youtube"><i
-                                    class="fa fa-youtube-play fa-2x" aria-hidden="true"></i>
-                            </a>
-                        </div>
-  
-  
-                        
-  
-                        
+                    </li>
+                    {% endif %}
+                    <div>
+                        <a style="color: rgb(157, 94, 189); padding-left: 10px; padding-right: 20px;"
+                            href="https://www.facebook.com/SunniHanfiOrganisationMumbai/"><i
+                                class="fab fa-facebook-square fa-2x"></i></a>
+                        <a style="color: rgb(157, 94, 189); padding-left: 10px; padding-right: 20px;"
+                            href="mailto: imran.shaikh16230@gmail.com" title="email"><i
+                                class="fas fa-envelope fa-2x"></i></a>
+                        <a style="color:rgb(157, 94, 189); padding-left: 10px;padding-right:20px;"
+                            href="https://www.youtube.com/user/786SHO/videos" title="youtube"><i
+                                class="fa fa-youtube-play fa-2x" aria-hidden="true"></i>
+                        </a>
+                    </div>
+
+
+
+
+
                 </ul>
                 <div class="clear"></div>
                 <span class="widget-item-control">
                     <span class="item-control blog-admin">
-  
+
                     </span>
                 </span>
                 <div class="clear"></div>
             </div>
-  
+
+
         </div>
   
     </div>
@@ -150,67 +155,68 @@
             </script>
 
             <style>
-                .actionon {
-                    /* position: fixed; */
-                    bottom: 50px;
-                    left: 50px;
-                    width: 50px;
-                    height: 50px;
-                    background: rgb(142, 218, 129);
-                    color: #006400;
-                    border-radius: 100%;
-                    cursor: pointer;
-                    font-family: cursive;
-                    box-shadow: 0 10px 5px #006400;
-                }
+                    .actionon {
+                        /* position: fixed; */
+                        bottom: 50px;
+                        left: 50px;
+                        width: 50px;
+                        height: 50px;
+                        background: snow;
+                        color: #660099;
+                        border-radius: 100%;
+                        cursor: pointer;
+                        font-family: cursive;
+                        box-shadow: 0 10px 5px  rgb(225, 182, 246);
+                    }
 
-                .actionon span {
-                    position: relative;
-                    width: 100%;
-                    height: 100%;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    color: #006400;
-                    font-size: 1.2em;
-                    transition: 0.3s ease-in-out;
-                }
+                    .actionon span {
+                        position: relative;
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        color: #660099;
+                        font-size: 1.2em;
+                        transition: 0.3s ease-in-out;
+                    }
 
-                .actionon:active span {
-                    transform: rotate(75deg);
+                    .actionon:active span {
+                        transform: rotate(75deg);
 
-                }
-                .actionoff {
-                    /* position: fixed; */
-                    bottom: 50px;
-                    left: 50px;
-                    width: 50px;
-                    height: 50px;
-                    background: rgb(142, 218, 129);
-                    color: #006400;
-                    border-radius: 100%;
-                    cursor: pointer;
-                    font-family: cursive;
-                    box-shadow: 0 10px 5px #006400;
-                }
+                    }
 
-                .actionoff span {
-                    position: relative;
-                    width: 100%;
-                    height: 100%;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    color: #006400;
-                    font-size: 1.2em;
-                    transition: 0.3s ease-in-out;
-                }
+                    .actionoff {
+                        /* position: fixed; */
+                        bottom: 50px;
+                        left: 50px;
+                        width: 50px;
+                        height: 50px;
+                        background: snow;
+                        color: #660099;
+                        border-radius: 100%;
+                        cursor: pointer;
+                        font-family: cursive;
+                        box-shadow: 0 10px 5px  rgb(225, 182, 246);
+                    }
 
-                .actionoff:active span {
-                    transform: rotate(75deg);
+                    .actionoff span {
+                        position: relative;
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        color: #660099;
+                        font-size: 1.2em;
+                        transition: 0.3s ease-in-out;
+                    }
 
-                }
-            </style>
+                    .actionoff:active span {
+                        transform: rotate(75deg);
+
+                    }
+                </style>
         </div>
     </div>
     <div id="srch" style="margin-top: 20px;">
@@ -225,35 +231,34 @@
     </div>
   
     <div class="container my-4" id="wrapper" style="color: green; height: auto !important;">
-    <h2 style="color: green;">
-        Contact Sunni Hanfi Organization Admin:
+    <h2 style="color: rgb(157, 94, 189);">
+        <span style="box-shadow: 3px 3px 3px rgb(225, 182, 246);">Contact NewsInfo Admin:</span>
     </h2>
     
     <form method="POST" action="/contact/" >
     {% csrf_token %}
 
         <div class="form-group">
-          <label for="name" style="color: green;">Name :</label>
-          <input type="text" style="width: -webkit-fill-available;" class="form-control" id="name" name="name" aria-describedby="name" placeholder="Enter Name">
+          <label for="name" style="color: rgb(157, 94, 189);">Name :</label>
+          <input type="text" style="width: -webkit-fill-available; box-shadow: 4px 4px 4px rgb(225, 182, 246);" class="form-control" id="name" name="name" aria-describedby="name" placeholder="Enter Name">
 
         </div>
         <div class="form-group">
-          <label for="email" style="color: green;">Email address :</label>
-          <input type="email" style="width: -webkit-fill-available;" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Enter Email">
+          <label for="email" style="color: rgb(157, 94, 189);">Email address :</label>
+          <input type="email" style="width: -webkit-fill-available; box-shadow: 4px 4px 4px rgb(225, 182, 246);" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Enter Email">
           <small id="emailHelp" class="form-text text-muted" style="color: green;"> We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
-          <label for="phone" style="color: green;">Phone Number :</label>
-          <input type="phone" style="width: -webkit-fill-available;" class="form-control" id="phone" name="phone" aria-describedby="phone" placeholder="Enter Phone No.">
+          <label for="phone" style="color: rgb(157, 94, 189);">Phone Number :</label>
+          <input type="phone" style="width: -webkit-fill-available; box-shadow: 4px 4px 4px rgb(225, 182, 246);" class="form-control" id="phone" name="phone" aria-describedby="phone" placeholder="Enter Phone No.">
         </div>
         <div class="form-group">
-          <label for="content" style="color: green;"> How we may help you : </label>
-            <textarea class="form-control" style="width: -webkit-fill-available;" name="content" id="content" cols="30" rows="5" ></textarea>
+          <label for="content" style="color: rgb(157, 94, 189);"> How we may help you : </label>
+            <textarea class="form-control" style="width: -webkit-fill-available; box-shadow: 4px 4px 4px rgb(225, 182, 246);" name="content" id="content" cols="30" rows="5" ></textarea>
         </div>
-      <button type="submit" class="btn btn-sm btn-success">Submit</button>
+      <button type="submit" role="button" class="btn btn-light" style="color: snow; background-color: rgb(157, 94, 189); font-weight: 500;">Submit</button>
     </form>
   </div>
-
 
   <style>
     @media only screen and (min-width: 1000px) {
@@ -391,9 +396,9 @@
 
     @media only screen and (min-width: 250px) {
         #LinkList1 {
-            border: 0.6px solid green;
+            border: 0.6px solid rgb(157, 94, 189);
             border-radius: 3px;
-            background-color: rgb(193, 255, 182);
+            background-color: snow;
         }
     }
 
